Fixed bug where upload input height too small.

--- a/web/model-manager.css
+++ b/web/model-manager.css
@@ -547,7 +547,6 @@
 }
 
 .model-manager .model-preview-select-radio-inputs > div {
-    height: 40px;
     padding: 16px 0 8px 0;
 }
 
